--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                                     <li>About us</li>
                                     <li>Legal</li>
                                     <li>Copyright</li>
-                                    <hr class="border-b border-soundcloud-divide my-1"/>
+                                    <hr class="border-b border-[0px] border-soundcloud-divide my-1"/>
                                     <li class="text-soundcloud-orange">Get SoundCloud Go+</li>
                                     <li class="block xl:hidden text-soundcloud-orange">Try Next Pro</li>
                                     <li>Mobile apps</li>
@@ -368,14 +368,14 @@
                                     <li>Blog</li>
                                     <li>Jobs</li>
                                     <li>Developers</li>
-                                    <hr class="border-b border-soundcloud-divide my-1"/>
+                                    <hr class="border-b border-[0px] border-soundcloud-divide my-1"/>
                                     <li>Support</li>
                                     <li>Keyboard shortcuts</li>
-                                    <hr class="border-b border-soundcloud-divide my-1"/>
+                                    <hr class="border-b border-[0px] border-soundcloud-divide my-1"/>
                                     <li>Subscription</li>
                                     <li>Settings</li>
                                     <li>Sign out</li>
-                                    <hr class="lg:hidden block border-b border-soundcloud-divide my-1"/>
+                                    <hr class="lg:hidden block border-b border-[0px] border-soundcloud-divide my-1"/>
                                     <li class="lg:hidden block">For Artists</li>
                                     <li class="lg:hidden block">Upload</li>
                                 </ul>
@@ -409,111 +409,7 @@
         <div class="flex px-0 md:px-10 2xl:px-44 mb-14 md:divide-x divide-soundcloud-divide">
 
             <!-- main content - sliders -->
-            <div class="grow overflow-hidden pt-10 md:px-3 lg:mr-5 mb-32 md:mb-0">
-
-                <!-- slider 1 -->
-                <!-- <h1 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white">Recently Played</h1> -->
-                <!-- <div class="relative whitespace-nowrap">
-                    <div id="prevBtn" class="absolute top-0 -left-3 h-full group pt-20 cursor-pointer select-none touch-none z-30">
-                        <div class="size-[32px] flex items-center justify-center bg-soundcloud-main-bg rounded-sm border border-soundcloud-divide group-hover:border-soundcloud-orange group-hover:*:stroke-soundcloud-orange">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
-                            </svg>                              
-                        </div>
-                    </div>
-                    <div id="nextBtn" class="absolute top-0 -right-3 h-full group pt-20 cursor-pointer select-none touch-none z-30">
-                        <div class="size-[32px] flex items-center justify-center bg-soundcloud-main-bg rounded-sm border border-soundcloud-divide group-hover:border-soundcloud-orange group-hover:*:stroke-soundcloud-orange">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
-                            </svg>                                                           
-                        </div>
-                    </div>
-                    <div id="slider" class="overflow-x-auto scrollbar-hide">
-                        <div id="inner-slider" class="flex space-x-3 md:space-x-4 transition-transform will-change-auto">
-                            <div class="flex flex-col w-[130px] md:w-[170px]">
-                                <div class="w-[130px] md:size-[170px] overflow-hidden">
-                                    <img src="./public/imgs/cover1.jpg" class="size-full object-cover" alt="song cover" />
-                                </div>
-                                <div>
-                                    <p class="text-white line-clamp-1">damn nigga!</p>
-                                    <p class="text-xs">unixnexo</p>
-                                </div>
-                            </div>
-                            <div class="flex flex-col w-[130px] md:w-[170px]">
-                                <div class="w-[130px] md:w-[170px] overflow-hidden">
-                                    <img src="./public/imgs/cover2.jpg" class="size-full object-cover" alt="song cover" />
-                                </div>
-                                <div>
-                                    <p class="text-white line-clamp-1">Allrizo 1-Popcast episode 1-Remix for car, gym, and your store😎-ریمیکس خفن برای ماشین باشگاه مغازه</p>
-                                    <p class="text-xs">unixnexo</p>
-                                </div>
-                            </div>
-                            <div class="flex flex-col w-[130px] md:w-[170px]">
-                                <div class="w-[130px] md:w-[170px] overflow-hidden">
-                                    <img src="./public/imgs/cover3.jpg" class="size-full object-cover" alt="song cover" />
-                                </div>
-                                <div>
-                                    <p class="text-white line-clamp-1">Gracing dreams on night</p>
-                                    <p class="text-xs">Luluia minio</p>
-                                </div>
-                            </div>
-                            <div class="flex flex-col w-[130px] md:w-[170px]">
-                                <div class="w-[130px] md:w-[170px] overflow-hidden">
-                                    <img src="./public/imgs/cover5.jpg" class="size-full object-cover" alt="song cover" />
-                                </div>
-                                <div>
-                                    <p class="text-white line-clamp-1">why me!</p>
-                                    <p class="text-xs">Alexander lucas</p>
-                                </div>
-                            </div>
-                            <div class="flex flex-col w-[130px] md:w-[170px]">
-                                <div class="w-[130px] md:w-[170px] overflow-hidden">
-                                    <img src="./public/imgs/cover7.jpg" class="size-full object-cover" alt="song cover" />
-                                </div>
-                                <div>
-                                    <p class="text-white line-clamp-1">Fuck you mother fucker</p>
-                                    <p class="text-xs">I fuck your sister</p>
-                                </div>
-                            </div>
-                            <div class="flex flex-col w-[130px] md:w-[170px]">
-                                <div class="w-[130px] md:w-[170px] overflow-hidden">
-                                    <img src="./public/imgs/cover7.jpg" class="size-full object-cover" alt="song cover" />
-                                </div>
-                                <div>
-                                    <p class="text-white line-clamp-1">Fuck you mother fucker</p>
-                                    <p class="text-xs">I fuck your sister</p>
-                                </div>
-                            </div>
-                            <div class="flex flex-col w-[130px] md:w-[170px]">
-                                <div class="w-[130px] md:w-[170px] overflow-hidden">
-                                    <img src="./public/imgs/cover7.jpg" class="size-full object-cover" alt="song cover" />
-                                </div>
-                                <div>
-                                    <p class="text-white line-clamp-1">Fuck you mother fucker</p>
-                                    <p class="text-xs">I fuck your sister</p>
-                                </div>
-                            </div>
-                            <div class="flex flex-col w-[130px] md:w-[170px]">
-                                <div class="w-[130px] md:w-[170px] overflow-hidden">
-                                    <img src="./public/imgs/cover7.jpg" class="size-full object-cover" alt="song cover" />
-                                </div>
-                                <div>
-                                    <p class="text-white line-clamp-1">Fuck you mother fucker</p>
-                                    <p class="text-xs">I fuck your sister</p>
-                                </div>
-                            </div>
-                            <div class="flex flex-col w-[130px] md:w-[170px]">
-                                <div class="w-[130px] md:w-[170px] overflow-hidden">
-                                    <img src="./public/imgs/cover7.jpg" class="size-full object-cover" alt="song cover" />
-                                </div>
-                                <div>
-                                    <p class="text-white line-clamp-1">Fuck you mother fucker</p>
-                                    <p class="text-xs">I fuck your sister</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
+            <div class="grow overflow-hidden pt-10 md:px-3 lg:mr-5 mb-32 md:mb-0 divide-y divide-soundcloud-divide">
 
                 <h1 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white pl-3 md:pl-0">Recently played</h1>
                 <custom-slider>
@@ -526,7 +422,7 @@
                     <slider-item img="./public/imgs/cover16.jpg" main-text="دور از نفست_ آرمان گرشاسبی_Arman Garshasbi-Door az nafasat" secondary-text="Saeideh Abaspour, Merisa, Mohammad Jeihani, Donya"></slider-item>
                 </custom-slider>
 
-                <h2 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-0">More of what you like</h2>
+                <h2 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-0 pt-10">More of what you like</h2>
                 <custom-slider>
                     <slider-item img="./public/imgs/cover8.jpg" main-text="Bazar Khoramshahr" secondary-text="Mohsen Chavoshi, mahan, Erfan Tahmasbi, Googoosh"></slider-item>
                     <slider-item img="./public/imgs/cover9.jpg" main-text="Dj Mehrdad Aghdam" secondary-text="Top tracks"></slider-item>
@@ -536,6 +432,18 @@
                     <slider-item img="./public/imgs/cover13.jpg" main-text="RANJ 10 - DJ Soushi & DJ Vafa" secondary-text="DjSoushi, Abdullah, sajadelmadrid23, Cafe Solar Elahiyeh"></slider-item>
                     <slider-item img="./public/imgs/cover14.jpg" main-text="شوریده سر هایده" secondary-text="User 905654534, Hafez T1, Alireza Talischi, DJ taba"></slider-item>
                     <slider-item img="./public/imgs/cover15.jpg" main-text="Phonk Drifting Music Car Porn 2023 | Memphis, Racing, JDM Drifting, Best Drift Music, Tuning Music" secondary-text="Playlist Beast"></slider-item>
+                </custom-slider>
+
+                <h3 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-0 pt-10">Mixed for unix nexo</h3>
+                <custom-slider>
+                    <slider-item img="./public/imgs/cover17.jpg" main-text="Your Mix 1" secondary-text="Melly Mike, octobersveryown, Central Cee, Dave, Mobb Deep"></slider-item>
+                    <slider-item img="./public/imgs/cover18.jpg" main-text="Your Mix 2" secondary-text="Sirvan Khosravi, kandlus, LoveStyle Records, octobersveryown, Nakhoda"></slider-item>
+                    <slider-item img="./public/imgs/cover19.jpg" main-text="Beham Rikhte~MelonMusic.ir" secondary-text="erfan elahi fard, amerr arsalan, SadraM, Pegahbisabri"></slider-item>
+                    <slider-item img="./public/imgs/cover20.jpg" main-text="Your Mix 3" secondary-text="Bandari, Mostafa, Arvin Bastaki, JonubiHa"></slider-item>
+                    <slider-item img="./public/imgs/cover21.jpg" main-text="Ramin Karami - Aks" secondary-text="NewAhang, Shahdad, HN BEATZ, Reza Karami Tara"></slider-item>
+                    <slider-item img="./public/imgs/cover3.jpg" main-text="RANJ 10 - DJ Soushi & DJ Vafa" secondary-text="DjSoushi, Abdullah, sajadelmadrid23, Cafe Solar Elahiyeh"></slider-item>
+                    <slider-item img="./public/imgs/cover7.jpg" main-text="شوریده سر هایده" secondary-text="User 905654534, Hafez T1, Alireza Talischi, DJ taba"></slider-item>
+                    <slider-item img="./public/imgs/cover1.jpg" main-text="Phonk Drifting Music Car Porn 2023 | Memphis, Racing, JDM Drifting, Best Drift Music, Tuning Music" secondary-text="Playlist Beast"></slider-item>
                 </custom-slider>
 
             </div>
