--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         <div class="flex px-0 md:px-10 2xl:px-44 mb-14 md:divide-x divide-soundcloud-divide">
 
             <!-- main content - sliders -->
-            <div class="grow overflow-hidden pt-10 md:px-3 lg:mr-5 mb-32 md:mb-0 divide-y divide-soundcloud-divide">
+            <div class="grow overflow-hidden pt-10 md:px-3 lg:mr-5 mb-32 md:mb-10 divide-y divide-soundcloud-divide">
 
                 <h1 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white pl-3 md:pl-0">Recently played</h1>
                 <custom-slider>
@@ -444,6 +444,16 @@
                     <slider-item img="./public/imgs/cover3.jpg" main-text="RANJ 10 - DJ Soushi & DJ Vafa" secondary-text="DjSoushi, Abdullah, sajadelmadrid23, Cafe Solar Elahiyeh"></slider-item>
                     <slider-item img="./public/imgs/cover7.jpg" main-text="شوریده سر هایده" secondary-text="User 905654534, Hafez T1, Alireza Talischi, DJ taba"></slider-item>
                     <slider-item img="./public/imgs/cover1.jpg" main-text="Phonk Drifting Music Car Porn 2023 | Memphis, Racing, JDM Drifting, Best Drift Music, Tuning Music" secondary-text="Playlist Beast"></slider-item>
+                </custom-slider>
+
+                <h4 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-0 pt-10">Trending Music on SoundCloud</h4>
+                <custom-slider>
+                    <slider-item img="./public/imgs/cover22.jpg" main-text="Your Mix 1" secondary-text="Melly Mike, octobersveryown, Central Cee, Dave, Mobb Deep"></slider-item>
+                    <slider-item img="./public/imgs/cover23.jpg" main-text="Your Mix 2" secondary-text="Sirvan Khosravi, kandlus, LoveStyle Records, octobersveryown, Nakhoda"></slider-item>
+                    <slider-item img="./public/imgs/cover24.jpg" main-text="Beham Rikhte~MelonMusic.ir" secondary-text="erfan elahi fard, amerr arsalan, SadraM, Pegahbisabri"></slider-item>
+                    <slider-item img="./public/imgs/cover13.jpg" main-text="Your Mix 3" secondary-text="Bandari, Mostafa, Arvin Bastaki, JonubiHa"></slider-item>
+                    <slider-item img="./public/imgs/cover12.jpg" main-text="Ramin Karami - Aks" secondary-text="NewAhang, Shahdad, HN BEATZ, Reza Karami Tara"></slider-item>
+                    <slider-item img="./public/imgs/cover5.jpg" main-text="RANJ 10 - DJ Soushi & DJ Vafa" secondary-text="DjSoushi, Abdullah, sajadelmadrid23, Cafe Solar Elahiyeh"></slider-item>
                 </custom-slider>
 
             </div>
