--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         <div class="flex px-0 md:px-10 2xl:px-44 mb-14 md:divide-x divide-soundcloud-divide">
 
             <!-- main content - sliders -->
-            <div class="grow overflow-hidden pt-10 md:px-3 lg:mr-5 mb-32 md:mb-10 divide-y divide-soundcloud-divide">
+            <div class="grow overflow-hidden pt-10 md:px-3 lg:mr-5 mb-32 md:mb-10 md:divide-y divide-soundcloud-divide">
 
                 <h1 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white pl-3 md:pl-0">Recently played</h1>
                 <custom-slider>
@@ -422,7 +422,7 @@
                     <slider-item img="./public/imgs/cover16.jpg" main-text="دور از نفست_ آرمان گرشاسبی_Arman Garshasbi-Door az nafasat" secondary-text="Saeideh Abaspour, Merisa, Mohammad Jeihani, Donya"></slider-item>
                 </custom-slider>
 
-                <h2 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-0 pt-10">More of what you like</h2>
+                <h2 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-0 md:pt-10">More of what you like</h2>
                 <custom-slider>
                     <slider-item img="./public/imgs/cover8.jpg" main-text="Bazar Khoramshahr" secondary-text="Mohsen Chavoshi, mahan, Erfan Tahmasbi, Googoosh"></slider-item>
                     <slider-item img="./public/imgs/cover9.jpg" main-text="Dj Mehrdad Aghdam" secondary-text="Top tracks"></slider-item>
@@ -434,7 +434,7 @@
                     <slider-item img="./public/imgs/cover15.jpg" main-text="Phonk Drifting Music Car Porn 2023 | Memphis, Racing, JDM Drifting, Best Drift Music, Tuning Music" secondary-text="Playlist Beast"></slider-item>
                 </custom-slider>
 
-                <h3 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-0 pt-10">Mixed for unix nexo</h3>
+                <h3 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-0 md:pt-10">Mixed for unix nexo</h3>
                 <custom-slider>
                     <slider-item img="./public/imgs/cover17.jpg" main-text="Your Mix 1" secondary-text="Melly Mike, octobersveryown, Central Cee, Dave, Mobb Deep"></slider-item>
                     <slider-item img="./public/imgs/cover18.jpg" main-text="Your Mix 2" secondary-text="Sirvan Khosravi, kandlus, LoveStyle Records, octobersveryown, Nakhoda"></slider-item>
@@ -446,7 +446,7 @@
                     <slider-item img="./public/imgs/cover1.jpg" main-text="Phonk Drifting Music Car Porn 2023 | Memphis, Racing, JDM Drifting, Best Drift Music, Tuning Music" secondary-text="Playlist Beast"></slider-item>
                 </custom-slider>
 
-                <h4 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-0 pt-10">Trending Music on SoundCloud</h4>
+                <h4 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-0 md:pt-10">Trending Music on SoundCloud</h4>
                 <custom-slider>
                     <slider-item img="./public/imgs/cover22.jpg" main-text="Your Mix 1" secondary-text="Melly Mike, octobersveryown, Central Cee, Dave, Mobb Deep"></slider-item>
                     <slider-item img="./public/imgs/cover23.jpg" main-text="Your Mix 2" secondary-text="Sirvan Khosravi, kandlus, LoveStyle Records, octobersveryown, Nakhoda"></slider-item>
