--- a/index.html
+++ b/index.html
@@ -413,47 +413,47 @@
 
                 <h1 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white pl-3 md:pl-0">Recently played</h1>
                 <custom-slider>
-                    <slider-item img="./public/imgs/cover1.jpg" main-text="Los Ultimos Son Los Primeros" secondary-text="AP, Krispy Music, juanpryt, Fuerza Regida"></slider-item>
-                    <slider-item img="./public/imgs/cover2.jpg" main-text="Машина" secondary-text="PoorQualityPorn"></slider-item>
-                    <slider-item img="./public/imgs/cover3.jpg" main-text="Everything Or Nothing #DQH2" secondary-text="INNA"></slider-item>
-                    <slider-item img="./public/imgs/cover4.webp" main-text="damn nigga!" secondary-text="unix nexo"></slider-item>
-                    <slider-item img="./public/imgs/cover6.jpg" main-text="Allrizo 1-Popcast episode 1-Remix for car, gym, and your store😎-ریمیکس خفن برای ماشین باشگاه مغازه" secondary-text="Monæ_Mahjoob, DJ SOOL, mohammad, DJWERSY"></slider-item>
-                    <slider-item img="./public/imgs/cover7.jpg" main-text="Dj Goja" secondary-text="Top tracks"></slider-item>
-                    <slider-item img="./public/imgs/cover16.jpg" main-text="دور از نفست_ آرمان گرشاسبی_Arman Garshasbi-Door az nafasat" secondary-text="Saeideh Abaspour, Merisa, Mohammad Jeihani, Donya"></slider-item>
+                    <slider-item menu-id="menu5.1" img="./public/imgs/cover1.jpg" main-text="Los Ultimos Son Los Primeros" secondary-text="AP, Krispy Music, juanpryt, Fuerza Regida"></slider-item>
+                    <slider-item menu-id="menu5.2" img="./public/imgs/cover2.jpg" main-text="Машина" secondary-text="PoorQualityPorn"></slider-item>
+                    <slider-item menu-id="menu5.3" img="./public/imgs/cover3.jpg" main-text="Everything Or Nothing #DQH2" secondary-text="INNA"></slider-item>
+                    <slider-item menu-id="menu5.4" img="./public/imgs/cover4.webp" main-text="damn nigga!" secondary-text="unix nexo"></slider-item>
+                    <slider-item menu-id="menu5.5" img="./public/imgs/cover6.jpg" main-text="Allrizo 1-Popcast episode 1-Remix for car, gym, and your store😎-ریمیکس خفن برای ماشین باشگاه مغازه" secondary-text="Monæ_Mahjoob, DJ SOOL, mohammad, DJWERSY"></slider-item>
+                    <slider-item menu-id="menu5.6" img="./public/imgs/cover7.jpg" main-text="Dj Goja" secondary-text="Top tracks"></slider-item>
+                    <slider-item menu-id="menu5.7" img="./public/imgs/cover16.jpg" main-text="دور از نفست_ آرمان گرشاسبی_Arman Garshasbi-Door az nafasat" secondary-text="Saeideh Abaspour, Merisa, Mohammad Jeihani, Donya"></slider-item>
                 </custom-slider>
 
-                <h2 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-0 md:pt-10">More of what you like</h2>
+                <h2 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white pl-3 md:pl-0 md:pt-10">More of what you like</h2>
                 <custom-slider>
-                    <slider-item img="./public/imgs/cover8.jpg" main-text="Bazar Khoramshahr" secondary-text="Mohsen Chavoshi, mahan, Erfan Tahmasbi, Googoosh"></slider-item>
-                    <slider-item img="./public/imgs/cover9.jpg" main-text="Dj Mehrdad Aghdam" secondary-text="Top tracks"></slider-item>
-                    <slider-item img="./public/imgs/cover10.jpg" main-text="Beham Rikhte~MelonMusic.ir" secondary-text="erfan elahi fard, amerr arsalan, SadraM, Pegahbisabri"></slider-item>
-                    <slider-item img="./public/imgs/cover11.jpg" main-text="دلکم دلبرکم. ناهید و شهرام" secondary-text="Mohammad Zaman, May B A, Shahab Ghazali, Dr Rahmani"></slider-item>
-                    <slider-item img="./public/imgs/cover12.jpg" main-text="Ramin Karami - Aks" secondary-text="NewAhang, Shahdad, HN BEATZ, Reza Karami Tara"></slider-item>
-                    <slider-item img="./public/imgs/cover13.jpg" main-text="RANJ 10 - DJ Soushi & DJ Vafa" secondary-text="DjSoushi, Abdullah, sajadelmadrid23, Cafe Solar Elahiyeh"></slider-item>
-                    <slider-item img="./public/imgs/cover14.jpg" main-text="شوریده سر هایده" secondary-text="User 905654534, Hafez T1, Alireza Talischi, DJ taba"></slider-item>
-                    <slider-item img="./public/imgs/cover15.jpg" main-text="Phonk Drifting Music Car Porn 2023 | Memphis, Racing, JDM Drifting, Best Drift Music, Tuning Music" secondary-text="Playlist Beast"></slider-item>
+                    <slider-item menu-id="menu5.8" img="./public/imgs/cover8.jpg" main-text="Bazar Khoramshahr" secondary-text="Mohsen Chavoshi, mahan, Erfan Tahmasbi, Googoosh"></slider-item>
+                    <slider-item menu-id="menu5.9" img="./public/imgs/cover9.jpg" main-text="Dj Mehrdad Aghdam" secondary-text="Top tracks"></slider-item>
+                    <slider-item menu-id="menu5.10" img="./public/imgs/cover10.jpg" main-text="Beham Rikhte~MelonMusic.ir" secondary-text="erfan elahi fard, amerr arsalan, SadraM, Pegahbisabri"></slider-item>
+                    <slider-item menu-id="menu5.11" img="./public/imgs/cover11.jpg" main-text="دلکم دلبرکم. ناهید و شهرام" secondary-text="Mohammad Zaman, May B A, Shahab Ghazali, Dr Rahmani"></slider-item>
+                    <slider-item menu-id="menu5.12" img="./public/imgs/cover12.jpg" main-text="Ramin Karami - Aks" secondary-text="NewAhang, Shahdad, HN BEATZ, Reza Karami Tara"></slider-item>
+                    <slider-item menu-id="menu5.13" img="./public/imgs/cover13.jpg" main-text="RANJ 10 - DJ Soushi & DJ Vafa" secondary-text="DjSoushi, Abdullah, sajadelmadrid23, Cafe Solar Elahiyeh"></slider-item>
+                    <slider-item menu-id="menu5.14" img="./public/imgs/cover14.jpg" main-text="شوریده سر هایده" secondary-text="User 905654534, Hafez T1, Alireza Talischi, DJ taba"></slider-item>
+                    <slider-item menu-id="menu5.15" img="./public/imgs/cover15.jpg" main-text="Phonk Drifting Music Car Porn 2023 | Memphis, Racing, JDM Drifting, Best Drift Music, Tuning Music" secondary-text="Playlist Beast"></slider-item>
                 </custom-slider>
 
-                <h3 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-0 md:pt-10">Mixed for unix nexo</h3>
+                <h3 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white pl-3 md:pl-0 md:pt-10">Mixed for unix nexo</h3>
                 <custom-slider>
-                    <slider-item img="./public/imgs/cover17.jpg" main-text="Your Mix 1" secondary-text="Melly Mike, octobersveryown, Central Cee, Dave, Mobb Deep"></slider-item>
-                    <slider-item img="./public/imgs/cover18.jpg" main-text="Your Mix 2" secondary-text="Sirvan Khosravi, kandlus, LoveStyle Records, octobersveryown, Nakhoda"></slider-item>
-                    <slider-item img="./public/imgs/cover19.jpg" main-text="Beham Rikhte~MelonMusic.ir" secondary-text="erfan elahi fard, amerr arsalan, SadraM, Pegahbisabri"></slider-item>
-                    <slider-item img="./public/imgs/cover20.jpg" main-text="Your Mix 3" secondary-text="Bandari, Mostafa, Arvin Bastaki, JonubiHa"></slider-item>
-                    <slider-item img="./public/imgs/cover21.jpg" main-text="Ramin Karami - Aks" secondary-text="NewAhang, Shahdad, HN BEATZ, Reza Karami Tara"></slider-item>
-                    <slider-item img="./public/imgs/cover3.jpg" main-text="RANJ 10 - DJ Soushi & DJ Vafa" secondary-text="DjSoushi, Abdullah, sajadelmadrid23, Cafe Solar Elahiyeh"></slider-item>
-                    <slider-item img="./public/imgs/cover7.jpg" main-text="شوریده سر هایده" secondary-text="User 905654534, Hafez T1, Alireza Talischi, DJ taba"></slider-item>
-                    <slider-item img="./public/imgs/cover1.jpg" main-text="Phonk Drifting Music Car Porn 2023 | Memphis, Racing, JDM Drifting, Best Drift Music, Tuning Music" secondary-text="Playlist Beast"></slider-item>
+                    <slider-item menu-id="menu5.16" img="./public/imgs/cover17.jpg" main-text="Your Mix 1" secondary-text="Melly Mike, octobersveryown, Central Cee, Dave, Mobb Deep"></slider-item>
+                    <slider-item menu-id="menu5.17" img="./public/imgs/cover18.jpg" main-text="Your Mix 2" secondary-text="Sirvan Khosravi, kandlus, LoveStyle Records, octobersveryown, Nakhoda"></slider-item>
+                    <slider-item menu-id="menu5.18" img="./public/imgs/cover19.jpg" main-text="Beham Rikhte~MelonMusic.ir" secondary-text="erfan elahi fard, amerr arsalan, SadraM, Pegahbisabri"></slider-item>
+                    <slider-item menu-id="menu5.19" img="./public/imgs/cover20.jpg" main-text="Your Mix 3" secondary-text="Bandari, Mostafa, Arvin Bastaki, JonubiHa"></slider-item>
+                    <slider-item menu-id="menu5.20" img="./public/imgs/cover21.jpg" main-text="Ramin Karami - Aks" secondary-text="NewAhang, Shahdad, HN BEATZ, Reza Karami Tara"></slider-item>
+                    <slider-item menu-id="menu5.21" img="./public/imgs/cover3.jpg" main-text="RANJ 10 - DJ Soushi & DJ Vafa" secondary-text="DjSoushi, Abdullah, sajadelmadrid23, Cafe Solar Elahiyeh"></slider-item>
+                    <slider-item menu-id="menu5.22" img="./public/imgs/cover7.jpg" main-text="شوریده سر هایده" secondary-text="User 905654534, Hafez T1, Alireza Talischi, DJ taba"></slider-item>
+                    <slider-item menu-id="menu5.23" img="./public/imgs/cover1.jpg" main-text="Phonk Drifting Music Car Porn 2023 | Memphis, Racing, JDM Drifting, Best Drift Music, Tuning Music" secondary-text="Playlist Beast"></slider-item>
                 </custom-slider>
 
-                <h4 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white mt-10 pl-3 md:pl-0 md:pt-10">Trending Music on SoundCloud</h4>
+                <h4 class="text-2xl md:text-3xl font-bold mb-2.5 md:mb-5 text-white pl-3 md:pl-0 md:pt-10">Trending Music on SoundCloud</h4>
                 <custom-slider>
-                    <slider-item img="./public/imgs/cover22.jpg" main-text="Your Mix 1" secondary-text="Melly Mike, octobersveryown, Central Cee, Dave, Mobb Deep"></slider-item>
-                    <slider-item img="./public/imgs/cover23.jpg" main-text="Your Mix 2" secondary-text="Sirvan Khosravi, kandlus, LoveStyle Records, octobersveryown, Nakhoda"></slider-item>
-                    <slider-item img="./public/imgs/cover24.jpg" main-text="Beham Rikhte~MelonMusic.ir" secondary-text="erfan elahi fard, amerr arsalan, SadraM, Pegahbisabri"></slider-item>
-                    <slider-item img="./public/imgs/cover13.jpg" main-text="Your Mix 3" secondary-text="Bandari, Mostafa, Arvin Bastaki, JonubiHa"></slider-item>
-                    <slider-item img="./public/imgs/cover12.jpg" main-text="Ramin Karami - Aks" secondary-text="NewAhang, Shahdad, HN BEATZ, Reza Karami Tara"></slider-item>
-                    <slider-item img="./public/imgs/cover5.jpg" main-text="RANJ 10 - DJ Soushi & DJ Vafa" secondary-text="DjSoushi, Abdullah, sajadelmadrid23, Cafe Solar Elahiyeh"></slider-item>
+                    <slider-item menu-id="menu5.24" img="./public/imgs/cover22.jpg" main-text="Your Mix 1" secondary-text="Melly Mike, octobersveryown, Central Cee, Dave, Mobb Deep"></slider-item>
+                    <slider-item menu-id="menu5.25" img="./public/imgs/cover23.jpg" main-text="Your Mix 2" secondary-text="Sirvan Khosravi, kandlus, LoveStyle Records, octobersveryown, Nakhoda"></slider-item>
+                    <slider-item menu-id="menu5.26" img="./public/imgs/cover24.jpg" main-text="Beham Rikhte~MelonMusic.ir" secondary-text="erfan elahi fard, amerr arsalan, SadraM, Pegahbisabri"></slider-item>
+                    <slider-item menu-id="menu5.27" img="./public/imgs/cover13.jpg" main-text="Your Mix 3" secondary-text="Bandari, Mostafa, Arvin Bastaki, JonubiHa"></slider-item>
+                    <slider-item menu-id="menu5.28" img="./public/imgs/cover12.jpg" main-text="Ramin Karami - Aks" secondary-text="NewAhang, Shahdad, HN BEATZ, Reza Karami Tara"></slider-item>
+                    <slider-item menu-id="menu5.29" img="./public/imgs/cover5.jpg" main-text="RANJ 10 - DJ Soushi & DJ Vafa" secondary-text="DjSoushi, Abdullah, sajadelmadrid23, Cafe Solar Elahiyeh"></slider-item>
                 </custom-slider>
 
             </div>
