--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                                 </div>
                             </div>
                             <!-- hover content -->
-                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1 test pl-5">
+                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1 outer-shadow pl-5">
                                 <button class="border bg-soundcloud-main-bg border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange *:hover:fill-soundcloud-orange">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="none" class="size-3.5">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
@@ -740,7 +740,7 @@
                                 </div>
                             </div>
                             <!-- hover content -->
-                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1 test pl-5">
+                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1 outer-shadow  pl-5">
                                 <button class="border bg-soundcloud-main-bg border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange *:hover:fill-soundcloud-orange">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="none" class="size-3.5">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
@@ -841,7 +841,7 @@
                                 </div>
                             </div>
                             <!-- hover content -->
-                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1 test pl-5">
+                            <div class="absolute right-0 hidden group-hover:flex items-center justify-center space-x-1 outer-shadow  pl-5">
                                 <button class="border bg-soundcloud-main-bg border-soundcloud-divide p-1 rounded-sm hover:border-soundcloud-orange *:hover:fill-soundcloud-orange">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="none" class="size-3.5">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
