--- a/index.html
+++ b/index.html
@@ -1127,12 +1127,9 @@
             </div>
               
             <!-- player -->
-            <div class="flex items-center lg:px-3">
-                <span class="text-soundcloud-orange">0:41</span>
-                <div class="relative mx-2">
-                    <div class="w-[25vw] lg:w-[33vw] bg-soundcloud-divide h-px"></div>
-                    <div class="absolute w-[30%] h-px top-0 bg-soundcloud-orange"></div>
-                </div>
+            <div id="custom-range-wrapper" class="flex items-center lg:px-3">
+                <span class="text-soundcloud-orange">2:10</span>
+                <input type="range" value="70" class="custom-range accent-soundcloud-orange w-[25vw] lg:w-[33vw] h-[2px] outline-none border-0 mx-2" />
                 <span>2:41</span>
             </div>
 
