--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
         </div>
 
         <!-- player - fixed at bottom - > md screens only -->
-        <div class="fixed bottom-0 hidden md:flex justify-center items-center space-x-4 h-[50px] bg-soundcloud-second-bg border-t border-soundcloud-divide w-full z-20">
+        <div class="fixed bottom-0 hidden md:flex justify-center items-center space-x-4 h-[50px] bg-soundcloud-second-bg border-t border-soundcloud-divide w-full z-50">
             
             <!-- player controls -->
             <div class="flex items-center space-x-4">
@@ -1129,15 +1129,21 @@
             <!-- player -->
             <div id="custom-range-wrapper" class="flex items-center lg:px-3">
                 <span class="text-soundcloud-orange">2:10</span>
-                <input type="range" value="70" class="custom-range accent-soundcloud-orange w-[25vw] lg:w-[33vw] h-[2px] outline-none border-0 mx-2" />
+                <input type="range" value="70" class="custom-range accent-soundcloud-orange w-[25vw] lg:w-[33vw] h-[2px] outline-none border-0 mx-2 cursor-pointer" />
                 <span>2:41</span>
             </div>
 
             <!-- song controls -->
             <div class="flex items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-5">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.114 5.636a9 9 0 0 1 0 12.728M16.463 8.288a5.25 5.25 0 0 1 0 7.424M6.75 8.25l4.72-4.72a.75.75 0 0 1 1.28.53v15.88a.75.75 0 0 1-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.009 9.009 0 0 1 2.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75Z" />
-                </svg>     
+                <div class="relative flex justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="peer size-5">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.114 5.636a9 9 0 0 1 0 12.728M16.463 8.288a5.25 5.25 0 0 1 0 7.424M6.75 8.25l4.72-4.72a.75.75 0 0 1 1.28.53v15.88a.75.75 0 0 1-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.009 9.009 0 0 1 2.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75Z" />
+                    </svg>  
+                    <div id="volume-con" class="absolute bottom-[68px] bg-soundcloud-main-bg border border-soundcloud-divide -rotate-90 flex justify-center py-3 px-2">
+                        <input type="range" class="h-px w-[90px] outline-none border-0 accent-soundcloud-orange cursor-pointer"/>
+                    </div>
+                </div> 
+                <!-- current song -->
                 <div class="flex ml-5 space-x-2">
                     <div class="size-[30px] rounded-sm overflow-hidden">
                         <img src="./public/imgs/cover7.jpg" class="size-full object-cover" alt="song cover" />
@@ -1163,7 +1169,7 @@
         </div>
 
         <!-- navigation menu - fixed at bottom - < md screens only -->
-        <div class="fixed md:hidden block bottom-0 w-full bg-soundcloud-header">
+        <div class="fixed md:hidden block bottom-0 w-full bg-soundcloud-header z-50">
             <ul class="flex items-center justify-between text-xs text-white *:h-14 *:w-20 *:rounded-lg p-1 *:space-y-1.5">
                 <div class="flex flex-col items-center justify-center bg-soundcloud-hover">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
@@ -1199,7 +1205,7 @@
         </div>
 
         <!-- player - fixed at bottom - < md screens only -->
-        <div class="fixed md:hidden block bottom-[66px] left-1/2 -translate-x-1/2 w-[97vw] bg-soundcloud-hover rounded-full p-3">
+        <div class="fixed md:hidden block bottom-[66px] left-1/2 -translate-x-1/2 w-[97vw] bg-soundcloud-hover rounded-full p-3 z-50">
             <div class="flex items-center space-x-3 px-1">
 
                 <div class="relative size-[50px] flex items-center justify-center bg-soundcloud-black rounded-full">
