--- a/index.html
+++ b/index.html
@@ -1136,11 +1136,11 @@
             <!-- song controls -->
             <div class="flex items-center">
                 <div class="relative flex justify-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="peer size-5">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="peer size-5 cursor-pointer">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M19.114 5.636a9 9 0 0 1 0 12.728M16.463 8.288a5.25 5.25 0 0 1 0 7.424M6.75 8.25l4.72-4.72a.75.75 0 0 1 1.28.53v15.88a.75.75 0 0 1-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.009 9.009 0 0 1 2.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75Z" />
                     </svg>  
                     <div id="volume-con" class="absolute bottom-[68px] bg-soundcloud-main-bg border border-soundcloud-divide -rotate-90 flex justify-center py-3 px-2">
-                        <input type="range" class="h-px w-[90px] outline-none border-0 accent-soundcloud-orange cursor-pointer"/>
+                        <input type="range" value="100" class="h-px w-[90px] outline-none border-0 accent-soundcloud-orange cursor-pointer"/>
                     </div>
                 </div> 
                 <!-- current song -->
