--- a/index.html
+++ b/index.html
@@ -1135,10 +1135,8 @@
 
             <!-- song controls -->
             <div class="flex items-center">
+                <!-- volume changer -->
                 <div class="relative flex justify-center group">
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-5 cursor-pointer">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.114 5.636a9 9 0 0 1 0 12.728M16.463 8.288a5.25 5.25 0 0 1 0 7.424M6.75 8.25l4.72-4.72a.75.75 0 0 1 1.28.53v15.88a.75.75 0 0 1-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.009 9.009 0 0 1 2.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75Z" />
-                    </svg> -->
                     <svg id="volume-svg" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-5 cursor-pointer">
                         <path class="path1" stroke-linecap="round" stroke-linejoin="round" d="M19.114 5.636a9 9 0 0 1 0 12.728"/>
                         <path class="path2" stroke-linecap="round" stroke-linejoin="round" d="M16.463 8.288a5.25 5.25 0 0 1 0 7.424"/>
@@ -1165,9 +1163,56 @@
                         <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-4">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z" />
                         </svg>   
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-4">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 12h16.5m-16.5 3.75h16.5M3.75 19.5h16.5M5.625 4.5h12.75a1.875 1.875 0 0 1 0 3.75H5.625a1.875 1.875 0 0 1 0-3.75Z" />
-                        </svg>                                                                          
+                        <div class="relative">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-4 cursor-pointer select-none touch-none">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 12h16.5m-16.5 3.75h16.5M3.75 19.5h16.5M5.625 4.5h12.75a1.875 1.875 0 0 1 0 3.75H5.625a1.875 1.875 0 0 1 0-3.75Z" />
+                            </svg>
+                            <!-- next up menu -->
+                            <div class="absolute bottom-10 right-0 w-[480px] whitespace-nowrap bg-soundcloud-main-bg border border-soundcloud-divide rounded-sm shadow-sm">
+                                <!-- header -->
+                                <div class="flex items-center justify-between border-b border-soundcloud-divide p-4">
+                                    <p class="text-xl">Next up</p>
+                                    <div class="flex items-center space-x-3">
+                                        <button class="border border-soundcloud-divide hover:border-white py-0.5 text-sm px-3">Clear</button>
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6 cursor-pointer">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+                                        </svg>                                          
+                                    </div>
+                                </div>
+                                <!-- body -->
+                                <div class="text-xs">
+                                    <ul class="flex flex-col *:px-4 *:py-2">
+                                        <li class="flex items-center space-x-1.5 group hover:bg-soundcloud-hover cursor-pointer">
+                                            <div class="relative flex items-center justify-center">
+                                                <div class="size-[32px] overflow-hidden">
+                                                    <img src="./public/imgs/cover16.jpg" class="size-full object-cover" alt="song cover" />
+                                                </div>
+                                                <div class="absolute hidden group-hover:flex items-center justify-center bg-soundcloud-orange rounded-full size-6">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-3">
+                                                        <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.347a1.125 1.125 0 0 1 0 1.972l-11.54 6.347a1.125 1.125 0 0 1-1.667-.986V5.653Z" />
+                                                    </svg>                                                      
+                                                </div>
+                                            </div>
+                                            <div class="flex flex-col grow">
+                                                <p>Dave <span class="hidden group-hover:inline text-soundcloud-text/70">. From your history</span></p>
+                                                <p>Come Together X Out of Time (Avangart Tabldot Remix)</p>
+                                            </div>
+                                            <div>
+                                                <p class="inline group-hover:hidden text-sm">8:31</p>
+                                                <div class="hidden group-hover:flex space-x-2">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-4">
+                                                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+                                                    </svg>
+                                                    <svg viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg" fill="white" stroke="white" class="size-4">
+                                                        <path d="M5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M12.5 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z M20 10a2.5 2.5 0 1 0 0 5 2.5 2.5 0 1 0 0-5z"/>
+                                                    </svg>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>                                                                       
                     </div>
                 </div>             
             </div>
