--- a/index.html
+++ b/index.html
@@ -2329,7 +2329,10 @@
                                             <p class="text-2xl">Autoplay station</p>
                                             <p class="text-soundcloud-text/70">Hear related tracks based on what's playing now.</p>
                                         </div>
-                                        <input type="radio" />
+                                        <label class="inline-flex items-center cursor-pointer">
+                                            <input type="checkbox" class="sr-only peer">
+                                            <div class="relative w-11 h-6 bg-soundcloud-second-bg outline outline-soundcloud-divide peer-checked:outline-none peer-focus:outline-none rounded-full peer-checked:after:translate-x-full peer-checked:after:border-black after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-black after:border-black after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-soundcloud-orange"></div>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
