--- a/index.html
+++ b/index.html
@@ -1164,17 +1164,17 @@
                             <path stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z" />
                         </svg>   
                         <div class="relative">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-4 cursor-pointer select-none touch-none">
+                            <svg id="nextup-menu-toggler" xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-4 cursor-pointer select-none touch-none">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 12h16.5m-16.5 3.75h16.5M3.75 19.5h16.5M5.625 4.5h12.75a1.875 1.875 0 0 1 0 3.75H5.625a1.875 1.875 0 0 1 0-3.75Z" />
                             </svg>
                             <!-- next up menu -->
-                            <div class="absolute bottom-10 right-0 w-[480px] whitespace-nowrap bg-soundcloud-main-bg rounded-sm outer-shadow-allaround">
+                            <div id="nextup-menu" class="absolute hidden bottom-10 right-0 w-[480px] whitespace-nowrap bg-soundcloud-main-bg rounded-sm outer-shadow-allaround">
                                 <!-- header -->
                                 <div class="flex sticky top-0 items-center justify-between border-b border-soundcloud-divide px-4 py-6">
                                     <p class="text-xl">Next up</p>
                                     <div class="flex items-center space-x-3">
                                         <button class="border border-soundcloud-divide hover:border-white py-0.5 text-sm px-3">Clear</button>
-                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6 cursor-pointer">
+                                        <svg id="close-nextup-menu" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6 cursor-pointer">
                                             <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
                                         </svg>                                          
                                     </div>
@@ -2336,7 +2336,6 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>                                                                       
                     </div>
                 </div>             
